# dtype_variant

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml  rustfmt.toml
.github/workflows/: release-plz.yml  test.yml
dtype_variant/: CHANGELOG.md  Cargo.toml
dtype_variant/src/: lib.rs
dtype_variant_derive/: CHANGELOG.md  Cargo.toml
dtype_variant_derive/src/: derive.rs  grouped_matcher.rs  lib.rs  matcher_gen.rs
examples/dynchunk/: Cargo.toml
examples/dynchunk/src/: main.rs
examples/game_events/: CHANGELOG.md  Cargo.toml
examples/game_events/src/: main.rs  simple_test.rs
examples/shared/: Cargo.toml
examples/shared/src/: lib.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
