[package]
name = "dtype_variant_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
description = "Proc macros for dtype_variant"

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["parsing"] }
